# metabolics_slips_trips

./: .gitignore  README.md  _tasks.py  pyproject.toml  requirements.txt
results/: features.csv
src/metabolics_slips_trips/: __init__.py  helper.py  loader.py  plots.py
src/notebooks/: all_participants.ipynb  analyze_features.ipynb  compute_features.ipynb  example.ipynb
